--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,11 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootswatch/dist/simplex/bootstrap.css",
+              "./node_modules/ngx-toastr/toastr.css"
+
+
             ],
             "scripts": []
           },
