--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "bootswatch": "^5.2.1",
     "ngx-bootstrap": "^2.0.5",
+    "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
